--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-scroll": "^1.8.5",
     "bootstrap": "^5.2.2",
     "framer-motion": "^7.6.7",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
+    "react-scroll": "^1.8.8",
     "react-tsparticles": "^2.5.3",
     "tsparticles": "^2.5.3"
   },
